[package]
name = "tms"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_simd = { git="https://github.com/rust-lang/portable-simd" }
mcr = { path = "../mcr" }
rand = "0.8.4"
chrono = "0.4"
csv = "1"
anyhow = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "tms"
harness = false

